# inference-server

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: main-gate.yml  nix-build.yml  pr-gate.yml
cmd/prover/: main.py
cmd/verifier_server/: main.py
demos/coding-agent/: EXPERIMENT_LOG.md  coding_agent_graph.json  demo.sh  plan.md
demos/proof-compare/: EXPERIMENT_LOG.md  build_all.py  demo.sh  plan.md  prove_partition.py
demos/proof-server/: EXPERIMENT_LOG.md  demo.sh  plan.md
demos/spec-decode/: EXPERIMENT_LOG.md  demo.sh  plan.md  spec_decode.py
demos/tap-protocol/: EXPERIMENT_LOG.md  captured-events.json  plan.md  viewer.html
demos/tap-train/: EXPERIMENT_LOG.md
docs/plans/: unified-task-graph-autogen.md
experiments/freivalds-attestation/: EXPERIMENT_LOG.md
experiments/prover-verifier-demo/: EXPERIMENT_LOG.md  viewer.html
modules/: README.md  __init__.py  _cmd.py  pipeline.py
modules/attestation/: README.md  __init__.py
modules/core/: __init__.py
modules/inference/: README.md  __init__.py
modules/memory/: __init__.py
modules/network/: __init__.py
modules/proof_server/: README.md  __init__.py  api.py  envelopes.py  flops.py  graph.py  ledger.py  partition.py  task_graph.py  tracer.py
modules/proof_server/sp1/: Cargo.toml
modules/proof_server/sp1/host/: Cargo.toml
modules/proof_server/sp1/host/src/: main.rs
modules/proof_server/sp1/lib/: Cargo.toml
modules/proof_server/sp1/lib/src/: lib.rs
modules/proof_server/sp1/partition-host/: Cargo.toml  build.rs
modules/proof_server/sp1/partition-host/src/: main.rs
modules/proof_server/sp1/partition-program/: Cargo.toml
modules/proof_server/sp1/partition-program/src/: main.rs
modules/proof_server/sp1/program/: Cargo.toml
modules/proof_server/sp1/program/src/: main.rs
modules/utils/: README.md  __init__.py
pkg/proverdet/: replay.py  (+2 more)
workflows/: README.md  __init__.py  deterministic_inference_server.py  deterministic_lora_training.py  verified_inference.py
(+132 files in other folders)
