[package]
name = "proof-server-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proof-server-host"
path = "src/main.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", default-features = false, features = ["blocking"] }
proof-server-lib = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
bincode = "1.3"

[build-dependencies]
sp1-build = { version = "6.0.1" }
