[package]
name = "proof-server-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "6.0.1" }
proof-server-lib = { workspace = true }
serde = { workspace = true }
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
